* Mon Apr 16 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.0.3-0
- pki::copy's source parameter now accepts any string to allow for use of NSS
  and remote file sources.

* Mon Dec 11 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.2-0
- Ensure that /etc/pki/simp_apps is recursively purged so that old certificates
  are not left on the system
- Adds a new param, `$certname`, that controls the name of the certs in keydist
  that will be copied over. This used to be set to `$facts['fqdn']` without an
  option to change it, now it will default to `$trusted['certname']`

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Update puppet dependency and remove OBE pe dependency in metadata.json

* Wed Jan 11 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- SIMP certs are now managed in /etc/pki/simp/x509, and application
  certs in /etc/pki/simp_apps/<app_name>/x509.

* Tue Jan 10 2017 Nick Miller <nick.miller@onyxpoint.com> - 6.0.0-0
- Changed default location of keydist certs from the files directory of the pki
  module unless $pki is set to 'simp', when it will pull from pki_files in a
  different module path instead.

* Mon Jan 09 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Set perms on simp_apps to 644/755; apps were being denied access to
  their own certs because they could not access /etc/pki/simp_apps.
- We have made the decision to centralize application certificates
  when simp is managing pki (simp_options::pki => true or 'simp').
  This update re-tools pki::copy to better handle managing certs
  in /etc/pki/simp_apps.

* Mon Dec 26 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Changed pki::pki_dir parameter to pki::base_dir
- Updated acceptance tests
- Fixed bugs in ordering

* Tue Dec 13 2016 Jeanne Greulich <jgreulich.greulich@onyxpoint.com> - 6.0.0-0
- Global catalyst updates
- Strong Type updates
- Changed default for pki directory to /etc/pki/simp from /etc/pki
